contrast color fix

--- a/lesson4/css/lesson4small.css
+++ b/lesson4/css/lesson4small.css
@@ -122,6 +122,7 @@ footer {
     /* justify-content: center; */
     height: 2em;
     text-align: center;
+    font-size: 20px;
 }
 
 /* .my-main-section{
